--- a/.golangci.yml
+++ b/.golangci.yml
@@ -1,61 +1,59 @@
+version: "2"
 run:
-  timeout: 10m
+  timeout: 5m
   allow-parallel-runners: true
 
-issues:
-  # don't skip warning about doc comments
-  # don't exclude the default set of lint
-  exclude-use-default: false
-  # restore some of the defaults
-  # (fill in the rest as needed)
-  exclude-rules:
-    - path: "clientutils/*"
-      linters:
-        - lll
-    - path: "envtestutils/*"
-      linters:
-        - lll
-    - path: "unstructuredutils/*"
-      linters:
-        - lll
-    - path: "metautils/*"
-      linters:
-        - lll
-    - path: "kustomizeutils/*"
-      linters:
-        - lll
-    - path: "configutils/*"
-      linters:
-        - lll
-    - path: "conditionutils/*"
-      linters:
-        - lll
-    - path: "testutils/*"
-      linters:
-        - lll
-    - path: "cmdutils/*"
-      linters:
-        - dupl
 linters:
-  disable-all: true
   enable:
-    - copyloopvar
     - dupl
     - errcheck
+    - copyloopvar
+    - ginkgolinter
     - goconst
     - gocyclo
-    - gofmt
-    - goimports
-    - gosimple
     - govet
     - ineffassign
-    - ginkgolinter
     - lll
     - misspell
     - nakedret
-    - prealloc
+    - revive
     - staticcheck
-    - typecheck
     - unconvert
     - unparam
     - unused
+  settings:
+    misspell:
+      ignore-rules:
+        - strat
+    revive:
+      severity: error
+      rules:
+        - name: exported
+        - name: if-return
+          disabled: true
+
+  exclusions:
+    generated: lax
+    presets:
+      - comments
+      - common-false-positives
+      - legacy
+      - std-error-handling
+    rules:
+      - path: (.+)\.go$
+        text: 'exported: type name will be used as (.+) by other packages, and that stutters; consider calling this (.+)'
+    paths:
+      - third_party$
+      - builtin$
+      - examples$
+severity:
+  default: error
+formatters:
+  enable:
+    - goimports
+  exclusions:
+    generated: lax
+    paths:
+      - third_party$
+      - builtin$
+      - examples$
